<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_md">

    <TextView
        android:id="@+id/playlistsTitle"
        style="@style/TextAppearance.TowfikMusic.Display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_md"
        android:text="@string/playlists_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/newPlaylist" />

    <TextView
        android:id="@+id/playlistsSubtitle"
        style="@style/TextAppearance.TowfikMusic.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:layout_marginEnd="@dimen/space_md"
        android:text="@string/playlists_subtitle"
        app:layout_constraintTop_toBottomOf="@id/playlistsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/newPlaylist" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newPlaylist"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlists_new"
        app:icon="@drawable/ic_add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylists"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_md"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/space_md"
        app:layout_constraintTop_toBottomOf="@id/playlistsSubtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/playlistsEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/playlistsSubtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/playlists_empty_title"
            android:src="@drawable/ic_playlists"
            app:tint="@color/on_surface_muted" />

        <TextView
            style="@style/TextAppearance.TowfikMusic.TrackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/playlists_empty_title"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.TowfikMusic.Caption"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="center"
            android:text="@string/playlists_empty_body" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
